--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href = "media.html">Media</a></li>
     </ul>
     </div>
-    <img src = "images/kontor.jpeg"/>
+    <img src = "Images/kontor.jpeg"/>
     <div style="background-color: bisque; margin: 30px; padding: 30px">
     <h3><u><a href = "produktsida.html">Vi erbjuder...</a></u></h3>
     <h5>Skrot och skort och mer skrot, samt korn. Klicka på rubriken för att se mer :)</h5>
