--- a/kontaktaoss.html
+++ b/kontaktaoss.html
@@ -23,7 +23,7 @@
         <li><strong>Skrotarn</strong></li>
         <table border="5">
             <tr>
-                <th><img src="images/skrotarn.jpg" width="200"/></th>
+                <th><img src="Images/skrotarn.jpg" width="200"/></th>
                 <td>Email: <a href = "mailto:skrotarn@skrotkorn.se">mailto:skrotarn@skrotkorn.se</a></td>           
                 <td>Skrotarn är VD på Skrot och Korn. <br> Glad och driven gubbe som gillar att skrota med passion.<br> Hans favoritskrot är muttrar.</td>   
             </tr>
@@ -32,7 +32,7 @@
         <li><strong>Skrotis</strong></li>
         <table border="5">
             <tr>
-                <th><img src="images/skrotis.jpg" width="200"/></th>
+                <th><img src="Images/skrotis.jpg" width="200"/></th>
                 <td>Email: <a href = "mailto:skrotis@skrotkorn.se">mailto:skrotis@skrotkorn.se</a></td>   
                 <td>Skrotis är en erfaren skrotare med många talanger. <br> Han sprider glädje på tippen som ingen annan. <br> Skrotis favoritskrot är rostiga plåtar.</td>   
             </tr>
