--- a/media.html
+++ b/media.html
@@ -21,7 +21,7 @@
     <h1><u>Media</u></h1>
     <h3>Välkommen och njut av grönsaker och en alldeles urgullig säl :)</h3>
     </div>
-    <video src="images/kitchen.mp4" controls width="400" height="300"></video>
+    <video src="Images/kitchen.mp4" controls width="400" height="300"></video>
     <br><br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/UMD-ULu9-48" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <br>
