--- a/produktsida.html
+++ b/produktsida.html
@@ -28,21 +28,21 @@
         </tr>
         <tr>
             <th>Skrot1</th>
-            <th><img src="images/skrot1.jpg" width="200"/></th>
+            <th><img src="Images/skrot1.jpg" width="200"/></th>
             <td>100 kr</td>           
             <td>70 kr</td>   
             <td>Vackra ringar med massa hål.</td>   
         </tr>
         <tr>
             <th>Skrot2</th>
-            <th><img src="images/skrot2.jpg" width="200"/></th>
+            <th><img src="Images/skrot2.jpg" width="200"/></th>
             <td>200 kr</td>   
             <td>170 kr</td>
             <td>Långa pinnar. Perfekt vid inbrott.</td>   
         </tr>
         <tr>
             <th>Skrot3</th>
-            <th><img src="images/skrot3.jpg" width="200"/></th>
+            <th><img src="Images/skrot3.jpg" width="200"/></th>
             <td>300 kr</td>  
             <td>270 kr</td>
             <td>Färgglada manicker för roligt bruk.</td>  
