--- a/kontaktformulär.html
+++ b/kontaktformulär.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body background="images/seal.jpeg">
+<body background="Images/seal.jpeg">
     <div style="background-color:darkmagenta; margin: 30px; padding: 30px">
         <h1>Vi som jobbar på Skrot och Korn AB är...</h1>
         <ul>
