--- a/kontaktaoss.html
+++ b/kontaktaoss.html
@@ -41,7 +41,7 @@
         <li><strong>Skrotariana</strong></li>
         <table border="5">
             <tr>
-                <th><img src="images/skrotariana.jpg" width="200"/></th>
+                <th><img src="Images/skrotariana.jpg" width="200"/></th>
                 <td>Email: <a href = "mailto:skrotariana@skrotkorn.se">mailto:skrotariana@skrotkorn.se</a></td>
                 <td>Skrotariana är det senaste tillskotten i Skrot och Korn. <br> Hon har en 6 år lång utbildning inom Skrot och Korn och ger företaget många nya insprirerande ideér. <br> Skrotarianas favoritskrot är lortiga metallburkar.</td>  
             </tr>
