--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div style="background-color: bisque; margin: 30px; padding: 30px">
     <h3><u><a href = "produktsida.html">Vi erbjuder...</a></u></h3>
     <h5>Skrot och skort och mer skrot, samt korn. Klicka på rubriken för att se mer :)</h5>
-    <h3><u><a href = "omoss.html">Om oss...</a></u></h3>
+    <h3><u><a href = "kontaktaoss.html">Om oss...</a></u></h3>
     <h5>Vi är skrot, mer skrot och korn. Klicka på rubriken för att veta mer om oss :)</h5>
     </div>
 
